bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q12 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[deliveryDays@7 as deliveryDays, offerURL@5 as offerURL, price@6 as price, productURI@0 as productURI, productlabel@1 as productlabel, validTo@8 as validTo, vendorURI@2 as vendorURI, vendorhomepage@4 as vendorhomepage, vendorname@3 as vendorname]
  CrossJoinExec
    CrossJoinExec
      CrossJoinExec
        CrossJoinExec
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI@2, vendorURI@0)], projection=[productURI@0, productlabel@1, vendorURI@2, vendorname@3, vendorhomepage@5]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI@2, vendorURI@0)], projection=[productURI@0, productlabel@1, vendorURI@2, vendorname@4]
              CrossJoinExec
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productURI@0, productURI@0)], projection=[productURI@0, productlabel@2]
                  ProjectionExec: expr=[object@0 as productURI]
                    FilterExec: graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:}, projection=[object@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?productURI], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, subject@1 ASC, predicate@2 ASC, object@3 ASC], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:} <= predicate_max@6, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product,data_type:,language_tag:}), subject in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:})]
                  ProjectionExec: expr=[subject@0 as productURI, object@1 as productlabel]
                    FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:}, projection=[subject@1, object@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?productURI <http://www.w3.org/2000/01/rdf-schema#label> ?productlabel], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:} AND {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:})]
                ProjectionExec: expr=[object@0 as vendorURI]
                  FilterExec: graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:}, projection=[object@3]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendorURI], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, subject@1 ASC, predicate@2 ASC, object@3 ASC], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:} <= predicate_max@6, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor,data_type:,language_tag:}), subject in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:})]
              ProjectionExec: expr=[subject@0 as vendorURI, object@1 as vendorname]
                FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:}, projection=[subject@1, object@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendorURI <http://www.w3.org/2000/01/rdf-schema#label> ?vendorname], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:} AND {term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www.w3.org/2000/01/rdf-schema#label,data_type:,language_tag:})]
            ProjectionExec: expr=[subject@0 as vendorURI, object@1 as vendorhomepage]
              FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://xmlns.com/foaf/0.1/homepage,data_type:,language_tag:}, projection=[subject@1, object@3]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendorURI <http://xmlns.com/foaf/0.1/homepage> ?vendorhomepage], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://xmlns.com/foaf/0.1/homepage,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://xmlns.com/foaf/0.1/homepage,data_type:,language_tag:} AND {term_type:0,value:http://xmlns.com/foaf/0.1/homepage,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://xmlns.com/foaf/0.1/homepage,data_type:,language_tag:})]
          ProjectionExec: expr=[object@0 as offerURL]
            FilterExec: graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage,data_type:,language_tag:}, projection=[object@3]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage> ?offerURL], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, subject@1 ASC, predicate@2 ASC, object@3 ASC], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage,data_type:,language_tag:} <= predicate_max@6, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage,data_type:,language_tag:}), subject in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:})]
        ProjectionExec: expr=[object@0 as price]
          FilterExec: graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:}, projection=[object@3]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, subject@1 ASC, predicate@2 ASC, object@3 ASC], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:} <= predicate_max@6, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price,data_type:,language_tag:}), subject in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:})]
      ProjectionExec: expr=[object@0 as deliveryDays]
        FilterExec: graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:}, projection=[object@3]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, subject@1 ASC, predicate@2 ASC, object@3 ASC], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:} <= predicate_max@6, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays,data_type:,language_tag:}), subject in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:})]
    ProjectionExec: expr=[object@0 as validTo]
      FilterExec: graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:}, projection=[object@3]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?validTo], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, subject@1 ASC, predicate@2 ASC, object@3 ASC], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:} <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:} <= predicate_max@6, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo,data_type:,language_tag:}), subject in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035,data_type:,language_tag:})]
