bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q12 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(deliveryDays@7) as deliveryDays, ENC_PT(offerURL@5) as offerURL, ENC_PT(price@6) as price, ENC_PT(productURI@3) as productURI, ENC_PT(productlabel@4) as productlabel, ENC_PT(validTo@8) as validTo, ENC_PT(vendorURI@0) as vendorURI, ENC_PT(vendorhomepage@1) as vendorhomepage, ENC_PT(vendorname@2) as vendorname]
  CrossJoinExec
    CrossJoinExec
      CrossJoinExec
        CrossJoinExec
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(productURI@3, productURI@0)], projection=[vendorURI@0, vendorhomepage@1, vendorname@2, productURI@3, productlabel@5]
            CrossJoinExec
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI@0, vendorURI@0)], projection=[vendorURI@0, vendorhomepage@1, vendorname@3]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(vendorURI@0, vendorURI@0)], projection=[vendorURI@0, vendorhomepage@1]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendorURI <http://xmlns.com/foaf/0.1/homepage> ?vendorhomepage], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as vendorURI, object@3 as vendorhomepage], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://xmlns.com/foaf/0.1/homepage>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://xmlns.com/foaf/0.1/homepage> AND <http://xmlns.com/foaf/0.1/homepage> <= predicate_max@2, required_guarantees=[predicate in (<http://xmlns.com/foaf/0.1/homepage>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendorURI], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..18106970]]}, projection=[object@3 as vendorURI], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?vendorURI <http://www.w3.org/2000/01/rdf-schema#label> ?vendorname], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as vendorURI, object@3 as vendorname], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/2000/01/rdf-schema#label> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/2000/01/rdf-schema#label> AND <http://www.w3.org/2000/01/rdf-schema#label> <= predicate_max@2, required_guarantees=[predicate in (<http://www.w3.org/2000/01/rdf-schema#label>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?productURI], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..18106970]]}, projection=[object@3 as productURI], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?productURI <http://www.w3.org/2000/01/rdf-schema#label> ?productlabel], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as productURI, object@3 as productlabel], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www.w3.org/2000/01/rdf-schema#label> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www.w3.org/2000/01/rdf-schema#label> AND <http://www.w3.org/2000/01/rdf-schema#label> <= predicate_max@2, required_guarantees=[predicate in (<http://www.w3.org/2000/01/rdf-schema#label>)]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage> ?offerURL], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..18106970]]}, projection=[object@3 as offerURL], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>)]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..18106970]]}, projection=[object@3 as price], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>)]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..18106970]]}, projection=[object@3 as deliveryDays], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>)]
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?validTo], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GSPO/delta-parquet-file.zstd.parquet:0..18106970]]}, projection=[object@3 as validTo], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo>, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> <= predicate_max@6, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo>), subject in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035>)]
