bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q12 (Optimized).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(deliveryDays) AS deliveryDays, ENC_PT(offerURL) AS offerURL, ENC_PT(price) AS price, ENC_PT(productURI) AS productURI, ENC_PT(productlabel) AS productlabel, ENC_PT(validTo) AS validTo, ENC_PT(vendorURI) AS vendorURI, ENC_PT(vendorhomepage) AS vendorhomepage, ENC_PT(vendorname) AS vendorname
  Cross Join: 
    Cross Join: 
      Cross Join: 
        Cross Join: 
          Projection: lhs.productURI AS productURI, lhs.productlabel AS productlabel, lhs.vendorURI AS vendorURI, lhs.vendorname AS vendorname, rhs.vendorhomepage AS vendorhomepage
            Inner Join: lhs.vendorURI = rhs.vendorURI
              SubqueryAlias: lhs
                Projection: lhs.productURI AS productURI, lhs.productlabel AS productlabel, lhs.vendorURI AS vendorURI, rhs.vendorname AS vendorname
                  Inner Join: lhs.vendorURI = rhs.vendorURI
                    SubqueryAlias: lhs
                      Cross Join: 
                        Projection: lhs.productURI AS productURI, rhs.productlabel AS productlabel
                          Inner Join: lhs.productURI = rhs.productURI
                            SubqueryAlias: lhs
                              QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product> ?productURI)
                            SubqueryAlias: rhs
                              QuadPattern (?productURI <http://www.w3.org/2000/01/rdf-schema#label> ?productlabel)
                        QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor> ?vendorURI)
                    SubqueryAlias: rhs
                      QuadPattern (?vendorURI <http://www.w3.org/2000/01/rdf-schema#label> ?vendorname)
              SubqueryAlias: rhs
                QuadPattern (?vendorURI <http://xmlns.com/foaf/0.1/homepage> ?vendorhomepage)
          QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage> ?offerURL)
        QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price> ?price)
      QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays> ?deliveryDays)
    QuadPattern (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Offer9035> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo> ?validTo)
